--- a/数据库.md
+++ b/数据库.md
@@ -1,5 +1,7 @@
 # 数据库
 
+[toc]
+
 
 
 ## 介绍
@@ -234,7 +236,7 @@ Warning: Since password will be sent to server in plain text, use ssl connection
 
 ## 图形化界面
 
-phpmyadmin
+> phpmyadmin
 
 ```shell
 1. [root@50mysql ~]# yum -y install httpd php php-mysql
@@ -255,7 +257,7 @@ SQL 中文意思  结构化查询语言
 
 ![img](imgs/LINUXNSD_V01RDBMS1DAY01_042.png)
 
-### 查询
+### 基础查询
 
 - ### 查询命令格式
 
@@ -356,11 +358,11 @@ select * from tarena.user where uid >3;
 
 #### 语法
 
-**仅可以使用数字、字母、下划线、不能纯数字**
+> **仅可以使用数字、字母、下划线、不能纯数字**
 
-**区分字母大小写**
+> **区分字母大小写**
 
-**具有唯一性，不可使用指令关键字、特殊字符**
+> **具有唯一性，不可使用指令关键字、特殊字符**
 
 ```mysql
 CREATE DATABASE IF NOT EXISTS GAME;
@@ -1467,7 +1469,7 @@ mysql> SHOW GRANTS;
 # 3. 给添加的用户设置权限
 mysql> GRANT 权限列表 ON 数据库名 TO 用户名@"客户端地址";
 
-# 4. 创建用户同时设置权限
+# 4. 还可以创建用户同时设置权限
 mysql> GRANT 权限列表 ON 数据库名 TO 用户名@"客户端地址" IDENTIFIED BY "密码" WITH GRANT OPTION;
 ```
 
@@ -1524,6 +1526,8 @@ mysql> GRANT INSERT ON 权限列表 TO 用户名@"客户端地址";
 ```mysql
 SET PASSWORD FOR 用户名@"客户段地址"=password("新密码");
 # 密码存储在mysql.user表的authentication_string字段
+# 也可使用ALTER USER来修改用户密码
+ALTER USER 用户名@"客户端地址" IDENTIFIED BY "密码";
 ```
 
 
@@ -1538,7 +1542,7 @@ mysql> SHOW GRANTS;
 +---------------------------------+
 | Grants for tim@%                |
 +---------------------------------+
-| GRANT USAGE ON *.* TO 'tim'@'%' |
+| GRANT USAGE ON *.* TO 'tim'@'%' |		# USAGE 表示无权限
 +---------------------------------+
 
 # 查看指定用户的权限
@@ -1561,12 +1565,392 @@ mysql> SHOW GRANTS;
 | GRANT SELECT ON `tarena`.`user` TO 'tim'@'%' |
 +----------------------------------------------+
 
-
-
 ```
 
 
 
 ### 权限撤销
 
+> 删除已有授权用户的权限
+>
+> **库名必须和授权时的表示方式一样**
+
 - 语法
+
+  ```mysql
+  REVOKE 权限列表 ON 数据库名 FROM 用户名@"客户端地址";
+  ```
+
+  ```mysql
+  # 示例
+  # 1. 查看用户
+  mysql> SELECT host,user FROM mysql.user;
+  +-------------+-----------+
+  | host        | user      |
+  +-------------+-----------+
+  | %           | admin     |
+  | %           | jing2     |
+  | %           | root      |
+  | %           | tim       |
+  | 192.168.4.% | jay       |
+  | 192.168.4.% | jing      |
+  | localhost   | mysql.sys |
+  | localhost   | root      |
+  | localhost   | yaya99    |
+  +-------------+-----------+
+  9 rows in set (0.00 sec)
+  
+  # 2. 查看指定用户权限
+  mysql> SHOW GRANTS FOR root@"%";
+  +-------------------------------------------------------------+
+  | Grants for root@%                                           |
+  +-------------------------------------------------------------+
+  | GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION |
+  +-------------------------------------------------------------+
+  1 row in set (0.00 sec)
+  
+  # 3. 撤销指定权限GRANT OPTION
+  mysql> REVOKE GRANT OPTION ON *.* FROM root@"%";
+  Query OK, 0 rows affected (0.00 sec)
+  
+  mysql> SHOW GRANTS FOR root@"%"
+      -> ;
+  +-------------------------------------------+
+  | Grants for root@%                         |
+  +-------------------------------------------+
+  | GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' |
+  +-------------------------------------------+
+  1 row in set (0.00 sec)
+  
+  # 4. 撤销指定单个权限DELETE，因为之前权限是ALL，此处删除DELETE后，会展示剩余的其它权限
+  mysql> REVOKE DELETE ON *.* FROM root@"%";
+  Query OK, 0 rows affected (0.00 sec)
+  
+  mysql> SHOW GRANTS FOR root@"%";
+  +------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+  | Grants for root@%                                                                                                                                                                                                                                                                                                                              |
+  +------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+  | GRANT SELECT, INSERT, UPDATE, CREATE, DROP, RELOAD, SHUTDOWN, PROCESS, FILE, REFERENCES, INDEX, ALTER, SHOW DATABASES, SUPER, CREATE TEMPORARY TABLES, LOCK TABLES, EXECUTE, REPLICATION SLAVE, REPLICATION CLIENT, CREATE VIEW, SHOW VIEW, CREATE ROUTINE, ALTER ROUTINE, CREATE USER, EVENT, TRIGGER, CREATE TABLESPACE ON *.* TO 'root'@'%' |
+  +------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+  1 row in set (0.00 sec)
+  
+  # 5. 撤销指定多个权限
+  mysql> REVOKE SELECT,INSERT,UPDATE ON *.* FROM root@"%";
+  
+  # 6. 撤销所有权限
+  mysql> REVOKE ALL ON *.* FROM root@"%";
+  Query OK, 0 rows affected (0.00 sec)
+  
+  mysql> SHOW GRANTS FOR root@"%";
+  +----------------------------------+
+  | Grants for root@%                |
+  +----------------------------------+
+  | GRANT USAGE ON *.* TO 'root'@'%' |	# 此处变为USAGE了
+  +----------------------------------+
+  1 row in set (0.00 sec)
+  
+  ```
+
+### 删除用户
+
+```mysql
+DROP USER 用户名@"客户端地址";
+```
+
+### MYSQL授权库
+
+> 存储用户权限信息的表
+>
+> user表					\#记录已有的授权**用户**及权限
+>
+> db表						\#记录已有授权用户对**数据库**的访问权限
+>
+> tables_priv表			\#记录已有授权用户对**表**的访问权限
+>
+> columns_priv表		\#记录已有授权用户对**字段**的访问权限
+>
+> 可以通过查看表记录获取已有授权用户的访问权限 ；也可以修改表记录来修改授权用户的访问权限，修改后需要使用命令**FLUSH PRIVILEGES**使修改权限生效
+
+## 基础查询进阶
+
+### 常用函数
+
+- 函数介绍
+
+  ![image-20220211154001816](imgs/image-20220211154001816.png)
+
+  ```mysql
+  # 格式：
+  SELECT  函数(字段名)  FROM  库名.表名；
+  SELECT  函数(字段名)  FROM  库名.表名 where  条件 ；
+  SELECT  函数() ;
+  SELECT  函数(数据) ;
+  ```
+
+  
+
+- 字符函数
+
+  > ```mysql
+  > 作用:处理字符或字符类型的字段
+  > LENGTH(str)	     	返字符串长度，以字节为单位
+  > CHAR_LENGTH(str)		返回字符串长度，以字符为单位
+  > UPPER(str)和UCASE(str)  将字符串中的字母全部转换成大写
+  > LOWER(str)和LCASE(str)	将str中的字母全部转换成小写
+  > SUBSTR(s, start,end) 	从s的start位置开始取出到end长度的子串
+  > INSTR(str,str1)		返回str1参数，在str参数内的位置
+  > TRIM(s)			返回字符串s删除了两边空格之后的字符串
+  > ```
+
+  ```mysql
+  mysql> SELECT CHAR_LENGTH(name) FROM tarena.user WHERE name="root";
+  +-------------------+
+  | CHAR_LENGTH(name) |
+  +-------------------+
+  |                 4 |
+  |                 4 |
+  +-------------------+
+  ```
+
+  
+
+- 数学函数
+
+  > ```mysql
+  > 作用:处理数据或数值类型的字段
+  > ABS(x)	返回x的绝对值
+  > PI()		返回圆周率π，默认显示6位小数
+  > MOD(x,y)	返回x被y除后的余数 
+  > CEIL(x)、CEILING(x)	返回不小于x的最小整数 (x 是小数)
+  > FLOOR(x）			返回不大于x的最大整数 (x 是小数)
+  > ROUND(x)			返回最接近于x的整数，即对x进行四舍五入 (x 是小数)
+  > ROUND(x,y) 		返回最接近x的数，其值保留到小数点后面y位，若y为负				值，则将保留到x到小数点左边y位 (x 是小数)
+  > ```
+
+  ```mysql
+  mysql> SELECT PI();
+  +----------+
+  | PI()     |
+  +----------+
+  | 3.141593 |
+  +----------+
+  1 row in set (0.00 sec)
+  
+  mysql> SELECT ABS(-10);
+  +----------+
+  | ABS(-10) |
+  +----------+
+  |       10 |
+  +----------+
+  1 row in set (0.00 sec)
+  
+  # 取出tarena.user表中的偶数行
+  mysql> SELECT id,name FROM tarena.user WHERE mod(id,2)=0;
+  +----+-----------------+
+  | id | name            |
+  +----+-----------------+
+  |  2 | bin             |
+  |  4 | adm             |
+  |  6 | sync            |
+  |  8 | halt            |
+  | 10 | operator        |
+  | 12 | ftp             |
+  | 14 | systemd-network |
+  | 16 | polkitd         |
+  | 18 | postfix         |
+  | 20 | rpc             |
+  | 22 | nfsnobody       |
+  | 24 | xixi            |
+  | 34 | dachui          |
+  | 36 | john            |
+  | 38 | root            |
+  +----+-----------------+
+  15 rows in set (0.00 sec)
+  
+  ```
+
+  
+
+- 聚集函数
+
+  > ```mysql
+  > 作用：数据统计命令 ，的返回值只有1个
+  > avg(字段名)			//计算平均值
+  > sum(字段名) 			//求和
+  > min(字段名) 			//获取最小值
+  > max(字段名) 			//获取最大值
+  > count(字段名) 			//统计字段值个数
+  > ```
+
+  ```mysql
+  mysql> SELECT count(name)  FROM tarena.user WHERE shell="/bin/bash";
+  +-------------+
+  | count(name) |
+  +-------------+
+  |           2 |
+  +-------------+
+  ```
+
+  
+
+- 数学计算
+
+  > 数学计算的使用  +   -     *   /     %
+  >
+  > 符号两边的 字段的是数值类型的 
+
+  ```mysql
+  mysql> SELECT employee_id,date,basic,bonus,basic+bonus as total FROM tarena.salary WHERE employee_id="9" limit 3;
+  +-------------+------------+-------+-------+-------+
+  | employee_id | date       | basic | bonus | total |
+  +-------------+------------+-------+-------+-------+
+  |           9 | 2016-06-10 | 11550 |  8000 | 19550 |
+  |           9 | 2016-07-10 | 11550 |  2000 | 13550 |
+  |           9 | 2016-08-10 | 11550 |  3000 | 14550 |
+  +-------------+------------+-------+-------+-------+
+  3 rows in set (0.00 sec)
+  
+  mysql> SELECT * FROM tarena.salary WHERE employee_id=9 and date="2020-03-10";
+  +------+------------+-------------+-------+-------+
+  | id   | date       | employee_id | basic | bonus |
+  +------+------------+-------------+-------+-------+
+  | 8255 | 2020-03-10 |           9 | 14037 |  9000 |
+  +------+------------+-------------+-------+-------+
+  1 row in set (0.00 sec)
+  
+  mysql> UPDATE tarena.salary SET bonus=bonus-5000 WHERE employee_id=9 and date="2020-03-10";
+  Query OK, 1 row affected (0.03 sec)
+  Rows matched: 1  Changed: 1  Warnings: 0
+  
+  mysql> SELECT * FROM tarena.salary WHERE employee_id=9 and date="2020-03-10";
+  +------+------------+-------------+-------+-------+
+  | id   | date       | employee_id | basic | bonus |
+  +------+------------+-------------+-------+-------+
+  | 8255 | 2020-03-10 |           9 | 14037 |  4000 |
+  +------+------------+-------------+-------+-------+
+  1 row in set (0.00 sec)
+  
+  ```
+
+  
+
+- 日期函数
+
+  ![image-20220211171640777](imgs/image-20220211171640777.png)
+
+  ```mysql
+  mysql> SELECT employee_id,hire_date,month(birth_date) FROM employees WHERE employee_id=9;
+  +-------------+------------+-------------------+
+  | employee_id | hire_date  | month(birth_date) |
+  +-------------+------------+-------------------+
+  |           9 | 2016-06-04 |                11 |
+  +-------------+------------+-------------------+
+  
+  mysql> SELECT employee_id,hire_date,year(birth_date) FROM employees WHERE employee_id=9;
+  +-------------+------------+------------------+
+  | employee_id | hire_date  | year(birth_date) |
+  +-------------+------------+------------------+
+  |           9 | 2016-06-04 |             1971 |
+  +-------------+------------+------------------+
+  
+  mysql> SELECT 2022-year(birth_date) as 年龄 FROM employees WHERE employee_id=9;
+  +--------+
+  | 年龄   |
+  +--------+
+  |     51 |
+  +--------+
+  1 row in set (0.00 sec)
+  
+  # 函数嵌套
+  mysql> SELECT year(now());
+  +-------------+
+  | year(now()) |
+  +-------------+
+  |        2022 |
+  +-------------+
+  1 row in set (0.00 sec)
+  ```
+
+  
+
+### 流程控制函数
+
+- if函数
+
+  > if(条件,v1,v2) 如果条件是TRUE则返回v1，否则返回v2
+  >
+  > ifnull(v1,v2)  如果v1不为NULL，则返回v1，否则返回v2
+
+  ```mysql
+  mysql> SELECT IF(1 = 2,"a","b");
+  +-------------------+
+  | IF(1 = 2,"a","b") |
+  +-------------------+
+  | b                 |
+  +-------------------+
+  
+  mysql> SELECT employee_id,if(basic+bonus > 20000,"有钱人","穷碧") as 贫富判断 FROM salary WHERE YEAR(date)=2020 and MONTH(date)=12 limit 5;
+  +-------------+--------------+
+  | employee_id | 贫富判断     |
+  +-------------+--------------+
+  |           1 | 有钱人       |
+  |           2 | 有钱人       |
+  |           3 | 穷碧         |
+  |           4 | 有钱人       |
+  |           5 | 有钱人       |
+  +-------------+--------------+
+  5 rows in set (0.01 sec)
+  
+  mysql> SELECT IFNULL(NULL,"ABC");
+  +--------------------+
+  | IFNULL(NULL,"ABC") |
+  +--------------------+
+  | ABC                |
+  +--------------------+
+  1 row in set (0.00 sec)
+  
+  mysql> SELECT IFNULL("DEF","ABC");
+  +---------------------+
+  | IFNULL("DEF","ABC") |
+  +---------------------+
+  | DEF                 |
+  +---------------------+
+  1 row in set (0.00 sec)
+  
+  ```
+
+  
+
+- case函数
+
+  > 如果字段名等于某个值，则返回对应位置then后面的结果，如果与所有值都不相等，则返回else后面的结果
+
+  ```mysql
+  语法格式1
+  CASE 字段名              
+  WHEN 值1 THEN 结果 
+  WHEN 值2 THEN 结果  
+  WHEN 值3 THEN 结果 
+  ELSE 结果  
+  END 
+   
+  语法格式2
+  CASE              
+  WHEN  判断条件 THEN 结果 
+  WHEN  判断条件  THEN 结果  
+  WHEN  判断条件 THEN 结果 
+  ELSE 结果  
+  END  
+  ```
+
+  
+
+### 查询结果处理
+
+- 概念
+- 排序
+- 分组
+- 过滤
+- 分页
+
+## 连接查询
